--- a/order.yaml.example
+++ b/order.yaml.example
@@ -9,6 +9,7 @@ lists:
     out_file: 'vipdrive.m3u8'
     type: 'vidprive'
 
+
 group_hd_split: ['кино', 'спорт']
 
 group_order: ['HD', 'EE', 'кино HD', 'кино', 'спорт HD', 'спорт', '4K', 'музыка',
@@ -19,7 +20,7 @@ groups:
     name: 'HD'
     begin: ['Первый канал HD', 'Россия 1 HD', 'ТВ3 HD', 'Пятница! HD', 'ТНТ HD', 'ТНТ HD 50', 'ТНТ4 HD', 'СТС HD', 'Рен ТВ HD',
             'НТВ HD', 'Звезда HD', 'Звезда Плюс HD', 'Авто Плюс HD', 'VF Авто', 'DTX HD', 'Discovery Channel HD', 'Discovery Science HD', 'Discovery HD orig', 'ID Xtra HD', 'ETV HD EE',
-            'ETV2 HD EE', 'ETV+ HD EE', 'EE TV HD EE', 'минимакс-live planet HD', 'Планета HD', 'Нано ТВ HD', 'Первый космический HD', 'Космо HD',
+            'ETV2 HD EE', 'ETV+ HD EE', 'EE TV HD EE', 'KLI_Humor_HD', 'BOX Travel HD', 'минимакс-live planet HD', 'Планета HD', 'Моя Планета HD', 'Нано ТВ HD', 'Первый космический HD', 'Космо HD',
             'Russian Extreme HD', 'День Победы HD', 'Арсенал HD', 'Победа HD', 'Galaxy HD', 'Viasat Explore HD',
             'Viasat History HD', 'Viasat Nature/History HD', 'минимакс-live planet HD', 'Мир HD', 'Nat Geo Wild HD', 'Nat Geo Wild HD 50',
             'National Geographic HD', 'National Geographic Channel HD 50', 'History HD', 'RTG HD', 'Fuel TV HD', 'Mezzo Live HD',
@@ -31,12 +32,12 @@ groups:
             'Viasat Explore HD', 'Viasat History HD', 'Viasat Nature/History HD', 'Мир HD',
             'Nat Geo Wild HD', 'Nat Geo Wild HD 50', 'National Geographic HD', 'National Geographic Channel HD 50',
             'History HD', 'RTG HD', 'Fuel TV HD', 'Mezzo Live HD', 'Animal Planet HD', 'Живая природа HD', 'Дикая охота HD',
-            'Охотник и рыболов HD', 'Travel HD', 'минимакс-live planet HD', 'MS CRIME HD']
+            'Охотник и рыболов HD', 'Travel HD', 'минимакс-live planet HD', 'MS CRIME HD', 'BOX Travel HD', 'KLI_Humor_HD']
     end: ['Россия 1 HD 50']
   -
     name: 'EE'
-    begin: ['Первый канал', 'Россия 1', 'НТВ', 'ТВ3', 'ТНТ', 'СТС', 'Рен ТВ', 'ТВЦ', 'Россия-Культура', 'Москва Доверие', 'Телеканал Звезда', 'Звезда Плюс', 'Авто Плюс', 'Авто 24', 'Пятница!', 'ETV EE', 'ETV+ EE', 'ETV2 EE', 'TV3 EE', 'Kanal 2 EE', 'Discovery Channel', 'Discovery Science', 'Discovery']
-    force: ['Первый канал', 'Россия 1', 'НТВ', 'ТВ3', 'ТНТ', 'СТС', 'Рен ТВ', 'ТВЦ', 'Россия-Культура', 'Москва Доверие', 'Телеканал Звезда', 'Звезда Плюс', 'Авто Плюс', 'Авто 24', 'Пятница!', 'ETV EE', 'ETV+ EE', 'ETV2 EE', 'TV3 EE', 'Kanal 2 EE', 'Discovery Channel', 'Discovery Science', 'Discovery']
+    begin: ['Первый канал', 'Россия 1', 'НТВ', 'ТВ3', 'ТНТ', 'СТС', 'Рен ТВ', 'ТВЦ', 'Россия-Культура', 'Санкт-Петербург', 'Москва Доверие', 'Телеканал Звезда', 'Звезда Плюс', 'Моя Планета', 'Ocean TV', 'Авто Плюс', 'Авто 24', 'Пятница!', 'ETV EE', 'ETV+ EE', 'ETV2 EE', 'TV3 EE', 'Kanal 2 EE', 'Discovery Channel', 'Discovery Science', 'Discovery']
+    force: ['Первый канал', 'Россия 1', 'НТВ', 'ТВ3', 'ТНТ', 'СТС', 'Рен ТВ', 'ТВЦ', 'Россия-Культура', 'Санкт-Петербург', 'Москва Доверие', 'Телеканал Звезда', 'Звезда Плюс', 'Моя Планета', 'Ocean TV', 'Авто Плюс', 'Авто 24', 'Пятница!', 'ETV EE', 'ETV+ EE', 'ETV2 EE', 'TV3 EE', 'Kanal 2 EE', 'Discovery Channel', 'Discovery Science', 'Discovery']
   -
     name: 'сериалы'
     begin: ['Paramount Comedy HD', 'VF Друзья']
@@ -48,16 +49,17 @@ groups:
             'Amedia Hit HD', 'Amedia Premium HD', 'BCU RUSERIAL HD', 'BOX Serial HD', 'BOX M.Serial HD', 'CineMan Ментовские войны',
             'CineMan Лесник', 'CineMan ПёС', 'Dosug TV ER', 'Fresh Series', 'LIBERTY serialy', 'LIBERTY svaty', 'LIBERTY ТУРК ФИЛЬМ 4K',
             'PROKOP TV SERIAL HD', 'Series Tv HD', 'SKY HIGH SERIES HD', 'PROKOP TV SERIAL FHD', 'VF Воронины', 'VF Доктор Хаус',
-            'VF Реальные пацаны', 'минимакс-полицейский с Рублёвки HD', 'минимакс-ольга HD', 'Canal+ Series FR', 'CineMan Сваты',
+            'VF Реальные пацаны', 'минимакс-полицейский с Рублёвки HD', 'KLI Киносерия FHD', 'минимакс-ольга HD', 'Canal+ Series FR', 'CineMan Сваты',
     'Dosug TV Сериал', 'Dosug TV Сваты', 'Dosug TV Ходячие мертвецы', 'VF Ходячие мертвецы', 'KBC-Криминальный Serial', 'Liberty Сваты',
-    'Liberty The Simpsons', 'Liberty Сериалы FHD', 'MM Гриффины HD', 'SKY HIGH ANIME HD', 'KBC-Family Animation']
+    'Liberty The Simpsons', 'Liberty Сериалы FHD', 'MM Гриффины HD', 'SKY HIGH ANIME HD', 'KBC-Family Animation', 'VF Теория большого взрыва',
+            'VF Секс в большом городе']
   -
     name: 'музыка'
     force: ['Bridge Deluxe', 'AIVA TV HD', 'KLI CLUB FHD', 'KLI Retro HD', 'MTV Live HD', 'BRIDGE HD', '4ever Music', 'C-Music HD', 'Жара HD', 'MTV Россия HD',
             'о2тв HD', 'Clubbing TV HD RU', 'AIVA HD', 'Viva HD', 'Krone hit HD', 'Mix m tv hd', '9 Volna HD', 'Music Top HD',
             'Spirit Tv HD', 'Biz music HD', 'Baraza Music HD', 'Илья ТВ Музыка HD', 'Первый музыкальный HD', 'Первый музыкальный HD BY', 'Первый музыкальный FULL HD', 'Первый музыкальный FHD (Бел)',
             'PROKOP TV ROCK HD', 'SKY HIGH LO FI HD', 'TOP Великолепный Век HD', 'UZ KLIP NEW', 'VF Привет из 90х',
-            'YOSSO TV Music Hits', 'минимакс-rock HD', 'минимакс-world hits HD', 'KLI Club FHD']
+            'YOSSO TV Music Hits', 'минимакс-rock HD', 'минимакс-world hits HD', 'KLI Club FHD', 'Citrus Live HD (C-Live HD)', 'KLI Club FHD']
   -
     name: 'детские'
     force: ['BCU Multserial HD', 'BCU Мультсериал HD', 'Nickelodeon HD', 'СТС Kids HD', 'BCU Kids HD', 'BCU Kids+ HD', 'ВЕСЕЛАЯ КАРУСЕЛЬ HD',
@@ -67,12 +69,12 @@ groups:
             'BCU Kids+ HD', 'ЕРАЛАШ HD', 'ВЕСЕЛАЯ КАРУСЕЛЬ HD', 'минимакс-smile HD', 'минимакс-Tom & Jerry HD',
             'минимакс-ussr-мультфильм HD', 'минимакс-ussr-приключения HD', 'минимакс-walt disney HD', 'С-Cartoon',
             'MS TOONS HD', 'Dosug Kids HD', 'KBC-Союз МУЛЬТZAL', 'LIBERTY MULTUKR 4K', 'Liberty Мульт 4K', 'Liberty Мульт ENG 4K',
-    'YOSSO TV C-Cartoon']
+    'YOSSO TV C-Cartoon', 'LIBERTY PLANKTON FHD']
   -
     name: 'спорт HD'
-    begin: ['Моторспорт ТВ HD', 'SKY SPORTS F1 UK', 'sky Sport F1 DE', 'Sky Sport F1 FHD DE', 'Sky Sport F1 IT' ]
-    force: ['Моторспорт ТВ HD', 'SKY SPORTS F1 UK', 'sky Sport F1 DE', 'Sky Sport F1 FHD DE', 'Sky Sport F1 IT', 'Setanta Sports 1 Baltic HD',
-            'Setanta Sports 2 Belarus HD', 'Setanta Ukraine Plus HD']
+    begin: ['Моторспорт ТВ HD', 'SKY SPORT MOTOGP', 'SKY SPORTS F1 UK', 'sky Sport F1 DE', 'Sky Sport F1 FHD DE', 'Sky Sport F1 IT' ]
+    force: ['Моторспорт ТВ HD', 'SKY SPORT MOTOGP', 'SKY SPORTS F1 UK', 'sky Sport F1 DE', 'Sky Sport F1 FHD DE', 'Sky Sport F1 IT', 'Setanta Sports 1 Baltic HD',
+            'Setanta Sports 2 Belarus HD', 'Setanta Ukraine Plus HD', 'BOX BE ON EDGE']
   -
     name: 'спорт'
     begin: ['Моторспорт ТВ', 'SKY SPORT MOTOGP', 'SKY SPORTS F1 UK', 'sky Sport F1 DE', 'Sky Sport F1 IT']
@@ -96,13 +98,14 @@ groups:
             'Наше любимое HD','Русский иллюзион HD', 'Романтичное HD', 'Paramount Channel HD', 'Про Любовь HD', 'Наш Кинопоказ HD', 'Блокбастер HD', 'Хит HD', 'Кинопоказ HD', 'Наше Мужское HD', 'Камеди HD', 'Шокирующее HD', 'TV1000 Action HD', 'TV 1000 Action HD', 'TV 1000 HD', 'TV1000 HD',
             'TV 1000 Русское кино HD', 'TV1000 Русское Кино HD', 'Премиальное HD 50', 'Мужское Кино HD', 'Flux HD', 'BCU Кинозал Premiere 1 HD', 'BCU Кинозал Premiere 2 HD', 'BCU Кинозал Premiere 3 HD', 'BCU СССР HD', 'BCU Action HD', 'BCU Catastrophe HD', 'BCU Cinema HD', 'BCU Cinema+ HD',
             'BCU Comedy HD', 'BCU Fantastic HD', 'BCU FilMystic HD', 'BCU History HD', 'BCU Kinorating HD', 'BCU Marvel HD', 'BCU Premiere HD', 'BCU Romantic HD', 'BCU Russian HD', 'BCU VHS HD', 'BCUMEDIA HD', 'BCU Stars HD', 'BCU Ultra 4K',
-            'BCU RUSERIAL HD', 'BCU Сваты HD', 'BCU Criminal HD', 'BCU Reality HD', 'BCU Survival HD', 'BCU Cosmo HD', 'BCU TruMotion HD', 'BACKUS TV HD', 'BEST Films HD', 'Sky2000 HD', 'Кинозал! VHS HD', 'Кинозал! ХИТ HD', 'СТРАХ HD', 'ФАНТАСТИКА HD',  'Premiere HD',
+            'BCU Сваты HD', 'BCU Criminal HD', 'BCU Reality HD', 'BCU Survival HD', 'BCU Cosmo HD', 'BCU TruMotion HD', 'BACKUS TV HD', 'BEST Films HD', 'Sky2000 HD', 'Кинозал! VHS HD', 'Кинозал! ХИТ HD', 'СТРАХ HD', 'ФАНТАСТИКА HD',  'Premiere HD',
             'Premium HD', 'РуКино HD', 'Victory HD', 'Paradox HD', 'Thriller HD', 'Paradise HD', 'Илья ТВ Кино HD', 'Илья ТВ Наше HD', 'Ужас ТВ HD', 'Christmas HD', 'UZ Swiridenko TV HD', 'UZ Swiridenko TV HD 2','UZ SWIRIDENKO TV HD', 'UZ SWIRIDENKO TV HD 2', 'Magic Family HD', 'UZ Kino 5 HD', 'Magic Love HD',
-            'Кинопремьера HD', 'Bollywood HD', 'Epic Drama', 'Видеокассета Ужасы', 'kino watch тв Свежаки HD']
+            'Кинопремьера HD', 'Bollywood HD', 'Epic Drama', 'Видеокассета Ужасы', 'kino watch тв Свежаки HD', 'TV1000 HD', 'Backus TV Original HD',
+    'BOX MAYDAY HD', 'BOX FANTASY HD', 'BOX GHOST HD', 'Magic Adventure HD']
   -
     name: 'другие'
     force: ['UZ Ералаш ТВ HD', 'VF Аниме', 'VF Городок', 'Сериал "Симпсоны"', 'BOX Anime HD', 'BOX Game HD', 'FAN HD',
-            'LIBERRTY THE SIMSONS', 'LIBERTY SouthPark', 'MS ANIMATED', 'MS ANIMATED HD', 'SKY HIGH ADULT HD']
+            'LIBERRTY THE SIMSONS', 'LIBERTY SouthPark', 'MS ANIMATED', 'MS ANIMATED HD', 'SKY HIGH ADULT HD', 'CineMan Симпсоны']
   -
     name: 'взрослые'
     end: []
